Codacy fixes